# wg-mangler

./: Cargo.toml  Changes.md  LICENSE  README.md
.github/workflows/: release.yaml  rust.yaml
src/: main.rs
